--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EVENT TIME-Wonderland </title>
+
+    <meta name="description" content="Պատվիրիր Հրավիրատոմս" />
+    <meta property="og:title" content="Event Time/Wonderland" />
+    <meta property="og:description" content="Էլեկտրոնային հրավիրատոմսեր " /> 
+    <meta property="og:url" content="https://eventtime.vercel.app/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/Eventtime2024/Eventtime_Wonderland/blob/main/img/1.jpg" />
+    <meta property="og:image:type" content="image/jpg" /> 
+    <meta property="og:image:width" content="400" /> 
+    <meta property="og:image:height" content="300" />
+
+
+
+    <title>EVENT TIME/Wonderland </title>
     <link rel="shortcut icon" href="img/icon.svg">
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
