--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Event Time/Wonderland" />
     <meta property="og:description" content="Էլեկտրոնային հրավիրատոմսեր " /> 
     <meta property="og:url" content="https://eventtime.vercel.app/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/Eventtime2024/Eventtime_Wonderland/blob/main/img/1.jpg" />
+    <meta property="og:image" content="https://github.com/Eventtime2024/Eventtime_Wonderland/blob/main/img/1.jpg?raw=true" />
     <meta property="og:image:type" content="image/jpg" /> 
     <meta property="og:image:width" content="400" /> 
     <meta property="og:image:height" content="300" />
