--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="secondpart">
       <div class="w50">
      <h1 class="vernagir">Սիրելի՜ բարեկամ</h1>
-     <p class="text2">  Դեկտեմբերի 1-ին, ժամը 15։00-ին սիրով  հրավիրում ենք մեր  խնամքի և զարգացման կենտրոնի հանդիսավոր բացմանը։ Այս կարևոր և նշանակալի իրադարձությունը  մենք ցանկանում ենք կիսել քեզ հետ՝ խոստանալով ջերմ ու հյուրընկալ մթնոլորտ։ Մեր հասցեն՝ Ուսանողական 14ա / 5։</p>
+     <p class="text2">  Նոյեմբերի 26-ին, ժամը 13։00-ին սիրով  հրավիրում ենք մեր  խնամքի և զարգացման կենտրոնի հանդիսավոր բացմանը։ Այս կարևոր և նշանակալի իրադարձությունը  մենք ցանկանում ենք կիսել քեզ հետ՝ խոստանալով ջերմ ու հյուրընկալ մթնոլորտ։ Մեր հասցեն՝ Ուսանողական 14ա / 5։</p>
     <div class="imgpart">
       <div class="nkar1">
         <img src="img/12.jpg" alt="">
